--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-
-<div id="title">
-	Archangel
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Archangel</title>
+</head>
+<header>
+	<center>
+		Archangel
+	</center>	
+</header>
+<body>
+<div>
+	
 </div>
+</body>
+</html>
