--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Archangel</title>
-</head>
-<header>
-	<center>
-		Archangel
-	</center>	
-</header>
-<body>
-<div>
-	
-</div>
-</body>
+	<head>
+		<title>Archangel</title>
+	</head>
+	<header>
+		<h1 class="title">
+			<center>
+				Arch Angel
+			</center>
+		</h1>
+	</header>
+	<body>
+		<div>
+			<canvas id="earth"></canvas>
+		</div>
+		<script src="three.js"></script>
+		<script>
+			var renderer = new THREE.WebGLRenderer({canvas: document.getElementById('earth'), antialias: true});
+			renderer.setClearColor(0x000000);
+			renderer.setPixelRatio(window.devicePixelRatio);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			var camera = new THREE.PerspectiveCamera(35,window.innerWidth / window.innerHeight, 0.1, 3000);
+			var scene = new THREE.Scene();
+
+			var light = new THREE.AmbientLight(0xffffff, 0.5)
+			scene.add(light)
+
+			var light2 = new THREE.PointLight(0xffffff, 0.5)
+			scene.add(light2)
+
+			var geometry = new THREE.CubeGeometry(100,100,100)
+			var material = new THREE.MeshLambertMaterial();
+			var mesh = new THREE.Mesh(geometry, material)
+			mesh.position.set(0,0,-500)
+
+			scene.add(mesh)
+
+			requestAnimationFrame(render)
+
+			function render() {
+				mesh.rotation.x += 0.03;
+				mesh.rotation.y += 0.01;
+				renderer.render(scene, camera)
+				requestAnimationFrame(render);
+			}
+
+		</script>
+	</body>
 </html>
