--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,7 +17,7 @@
 		<div class="menu" style="float: left; width: 30%;">
 			Menu
 		</div>
-		<script src="three.js"></script>
+		<script src="../ThreeJS/three.js"></script>
 		<script>
 			var renderer = new THREE.WebGLRenderer({canvas: document.getElementById('earth'), antialias: true});
 			renderer.setClearColor(0x000000);
