Added the charities and technology html pages in the html folder as well as to the menu on the index.htnl doc

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,8 +13,11 @@
 	<div class="menu" style="width: 10%; position: absolute; color: red; float: left; border: solid; margin: 10px;" ng-click="">
 		<center>
 			Menu
+			<a href="charities.html" style=" color: red;">Charities</a>
+			<a href="technology.html" style=" color: red;">Technology</a>
 		</center>
-	</div>
+		
+			</div>
 	<body style="margin: 0px; height: 100%; width: 100%;">
 		<canvas id="earth" style="margin: 0px; display: block;"></canvas>
 		<script src="../ThreeJS/three.js"></script>
