Added some info to the technology page and completed the mission statements for the charities page

--- a/HTML/charities.html
+++ b/HTML/charities.html
@@ -30,16 +30,30 @@
 		</p>
 
 		<p style="border-color: cyan; border: solid;">
-			
+			<h3>The Sierra Club Foundation</h3><br>
 			<h4 style="color: #00CC00"><b>Mission Statement: </b></h4>
+			The Sierra Club Foundation promotes efforts to educate and empower people to protect and improve the natural and human environment.<br>
+			<br>
 
+
+			Goals:
+			Solve the climate crisis primarily through a successful transition to a resource-efficient, clean energy economy that better serves people and nature;
+
+			Secure protections for public lands and waters, promote healthy ecosystems and communities, and fight for clean air and water;
+
+			Expand opportunities for more people to explore, enjoy, and protect the planet by supporting programs and policies that reach across economic, cultural, and community lines to get people outdoors; and
+
+			Build a diverse, inclusive environmental movement that reflects and represents today’s American public, and prioritizes important connections between environmental health and social justice.
+			<br>
+			<br>
 			<a href="https://www.sierraclubfoundation.org/" style=" color: orange;">https://www.sierraclubfoundation.org</a>
 		</p>
 
 
 		<p style="border-color: cyan; border: solid;">
-			
+			<h3>Rain Forest Alliance</h3><br>
 			<h4 style="color: #00CC00"><b>Mission Statement: </b></h4>
+			The Rainforest Alliance is a growing network of farmers, foresters, communities, scientists, governments, environmentalists, and businesses dedicated to conserving biodiversity and ensuring sustainable livelihoods. We are an international non-profit organization working to build strong forests, healthy agricultural landscapes, and thriving communities through creative, pragmatic collaboration.<br><br>
 
 			<a href="https://www.rainforest-alliance.org/" style=" color: orange;">https://www.rainforest-alliance.org</a>
 		</p>
@@ -47,31 +61,32 @@
 
 
 		<p style="border-color: cyan; border: solid;">
-			
+			<h3>The Blu</h3><br>
 			<h4 style="color: #00CC00"><b>Mission Statement: </b></h4>
+			A free downloadable program that turns the Internet into a globally-connected 3D digital ocean in order to raise awareness about the world's oceans.<br><br>
 
 			<a href="http://theblu.com/index.html" style=" color: orange;">THE BLU</a>
 		</p>
 
 
 		<p style="border-color: cyan; border: solid;">
-			
+			<h3>Surfrider Foundation</h3><br>
 			<h4 style="color: #00CC00"><b>Mission Statement: </b></h4>
-
+			The Surfrider Foundation is dedicated to the protection and enjoyment of the world's ocean, waves and beaches through a powerful activist network.<br><br>
 			<a href="http://www.surfrider.org/" style=" color: orange;">http://www.surfrider.org</a>
 		</p>
 
 		<p style="border-color: cyan; border: solid;">
-			
+			<h3>Oceana</h3><br>
 			<h4 style="color: #00CC00"><b>Mission Statement: </b></h4>
-
+			Oceana seeks to make our oceans as rich, healthy, and abundant as they once were. Oceana seeks to make our oceans more biodiverse and abundant by winning policy victories in the countries that govern much of the world's marine life.<br><br>
 			<a href="http://oceana.org/" style=" color: orange;">http://oceana.org</a>
 		</p>
 
 		<p style="border-color: cyan; border: solid;">
-			
+			<h3>4Ocean</h3><br>
 			<h4 style="color: #00CC00"><b>Mission Statement: </b></h4>
-
+			4Ocean is a global movement actively removing trash from the ocean and coastlines while inspiring individuals to work together for cleaner oceans, one pound at a time. By purchasing a 4Ocean Bracelet, you will remove one pound of trash from the ocean.<br><br>
 			<a href="https://4ocean.com/?gclid=EAIaIQobChMIrd_b04LK2QIVxGF-Ch0oMg5aEAAYASAAEgIsy_D_BwE" style=" color: orange;">https://4ocean.com</a>
 		</p>
 
