--- a/HTML/technology.html
+++ b/HTML/technology.html
@@ -5,9 +5,32 @@
 	<title>Technology</title>
 </head>
 <body style="background-color: black;">
-	<h1 style="color: gold; text-align: center;">Technological Advancements To Fight Pollution</h1>
+	<h1 style="color: gold; text-align: center;">Technological Advancements To Fight Pollution</h1><br>
 
-	<div></div>
+	<div style="color: gold;">
+		<p style="border-color: gold; border: solid;">
+		<h3>The Ocean Cleanup</h3>
+		The Ocean Cleanup, has raised an estimated $31.5 million to develop a drifting V-shaped system designed to collect plastic pollution at the ocean’s surface as currents push it along.<br><br>
+
+		<a href="https://www.theoceancleanup.com/" style=" color: #FF0033;">https://www.theoceancleanup.com</a>
+		</p>
+		
+		<p style="border-color: gold; border: solid;">
+		<h3>General Fusion</h3>
+		Transforming the world’s energy supply with the most practical path to fusion energy.
+		Fusion energy is a clean, safe, abundant and on-demand alternative for power generation. General Fusion is developing the world’s first commercially-viable fusion power plant.<br><br>
+
+		<a href="http://generalfusion.com/" style=" color: #FF0033;">http://generalfusion.com</a>
+		</p>
+
+		<p style="border-color: gold; border: solid;">
+		<h3>Carbon Engineering</h3>
+		Carbon Engineering is building technologies to capture CO₂ directly from the atmosphere, and to use that CO2 in the synthesis of clean transportation fuels that displace crude oil.
+
+		Our business is to provide the technology and facilities to synthesize global-scale quantities of clean fuels from air, water, and renewable power.<br><br>
+
+		<a href="http://carbonengineering.com/" style=" color: #FF0033;">http://carbonengineering.com/</a>
+	</div>
 
 </body>
 </html>
