Working on orbital controls

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,8 @@
 				renderer.setClearColor(0x000000);
 				renderer.setPixelRatio(window.devicePixelRatio);
 				renderer.setSize(window.innerWidth/(1), window.innerHeight/(1))
-				var camera = new THREE.PerspectiveCamera(35,window.innerWidth / window.innerHeight, 0.1, 3000);
+				var camera = new THREE.PerspectiveCamera(45,window.innerWidth / window.innerHeight, 0.1, 3000);
+				camera.position.set( 0, 0, 300);
 				var scene = new THREE.Scene();
 
 				var light = new THREE.AmbientLight(0xffffff, 0.5)
@@ -36,20 +37,82 @@
 				var light2 = new THREE.PointLight(0xffffff, 0.5)
 				scene.add(light2)
 
-				var geometry = new THREE.SphereGeometry(100, 20, 15)
+				var geometry = new THREE.BoxGeometry(100, 100, 100)
 				var material = new THREE.MeshLambertMaterial({ color: 0xff0000, wireframe: true});
 				var mesh = new THREE.Mesh(geometry, material)
-				mesh.position.set(0,0,-500)
+				mesh.position.set(0,0,0)
 
 				scene.add(mesh)
 
 				requestAnimationFrame(render)
 
+				var radius = 300;
+				var initX = 0;
+				var initY = 0;
+				var panFinalX = 0;
+				var panFinalY = 0;
+				var x = 0
+				var y = 0
+				var z = 0
+
 				window.addEventListener( 'resize', onWindowResize, false );
+				window.addEventListener( 'wheel', zoom);
+				window.addEventListener( 'mousedown', handleMouseDown);
+
+				function zoom() {
+					console.log(radius)
+					if (event.deltaY > 0) {
+						radius = radius + 5;
+						camera.position.set( panFinalX, panFinalY, radius );
+						x = panFinalX
+						y = panFinalY
+						z = radius
+					}
+					else {
+						radius = radius - 5;
+						camera.position.set( panFinalX, panFinalY, radius );
+					}
+					camera.lookAt(scene.position)
+				}
+
+				function handleMouseDown() {
+					window.addEventListener( 'mousemove', handleMouseMove);
+					window.addEventListener( 'mouseup', handleMouseUp);
+				}
+
+				function handleMouseMove() {
+					panFinalX = event.clientX
+					panFinalY = event.clientY
+					var changeX = initX - panFinalX
+					var changeY = initY - panFinalY
+					var angleX = Math.atan((changeX / 2) / radius) 
+					var angleY = Math.atan((changeY / 2) / radius) 
+
+					var a = Math.sin(angleX)
+					var b = Math.cos(angleX)
+					var c = Math.sin(angleY)
+					var d = Math.cos(angleY)
+
+					x = radius*c*b
+					y = radius*c*a
+					z = radius*d
+
+					radius = Math.sqrt(Math.pow(x, 2) + Math.pow(y, 2) + Math.pow(z, 2))
+					camera.position.set(x, y, z)
+					camera.lookAt(scene.position)
+
+					// initX = panFinalX
+					// initY = panFinalY
+				}
+
+				function handleMouseUp() {
+					window.removeEventListener('mouseup', handleMouseUp)
+					window.removeEventListener('mousemove', handleMouseMove)
+				}
 
 				function render() {
-					mesh.rotation.x += 0.03;
-					mesh.rotation.y += 0.03;
+					//mesh.rotation.x += 0.03;
+					//mesh.rotation.y += 0.03;
 					renderer.render(scene, camera)
 					requestAnimationFrame(render);
 				}
