Added Home Page without back design

--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -36,8 +36,8 @@
 			text-align: center;
 			text-decoration: underline;
 		}
-		#square {
-		    
+		body{
+			background: lightblue;
 		}
 		.container{
 			padding-top: 200px;
