Added in the technology pictures -Aaron

--- a/Site/HTML/technology.html
+++ b/Site/HTML/technology.html
@@ -27,6 +27,8 @@
 		Transforming the world’s energy supply with the most practical path to fusion energy.
 		Fusion energy is a clean, safe, abundant and on-demand alternative for power generation. General Fusion is developing the world’s first commercially-viable fusion power plant.<br><br>
 
+		<img src="gfusion.jpg" alt="General Fusion"><br><br>
+
 		<a href="http://generalfusion.com/" style=" color: #FF0033;">http://generalfusion.com</a>
 		</p>
 
@@ -35,6 +37,10 @@
 		Carbon Engineering is building technologies to capture CO₂ directly from the atmosphere, and to use that CO2 in the synthesis of clean transportation fuels that displace crude oil.
 
 		Our business is to provide the technology and facilities to synthesize global-scale quantities of clean fuels from air, water, and renewable power.<br><br>
+
+		<img src="carboncapture.jpg" alt="carbon fans"><br><br>
+
+		<img src="carbondiagram.jpg" alt="engineering diagram"><br><br>
 
 		<a href="http://carbonengineering.com/" style=" color: #FF0033;">http://carbonengineering.com</a>
 		</p>
@@ -46,6 +52,8 @@
 		To get there we are working to make the Seabin better and better and available to the maximum number of places. Also, educating and raising awareness to be able to one day live in a world where pollution devices are not needed.
 		<br><br>
 
+		<img src="seabin.jpg" alt="The sea bin bucket"><br><br>
+
 		<a href="http://seabinproject.com" style=" color: #FF0033;">http://seabinproject.com</a>
 		</p>
 
@@ -55,6 +63,8 @@
 		<br><br>
 		SMOG FREE PROJECT is a series of urban innovations led by Daan Roosegaarde to reduce pollution and provide an inspirational experience of a clean future. SMOG FREE TOWER, SMOG FREE RING and SMOG FREE BICYCLE provide a local solution of clean air in public spaces. Here along with governments, students and the clean-tech industry, people can work together to make a whole city smog free. Recent SMOG FREE PROJECTS have been launched in China, the Netherlands and Poland.
 		<br><br>
+
+		<img src="smogtower.jpg" alt="Smog Free Tower"><br><br>
 
 		<a href="https://www.studioroosegaarde.net/project/smog-free-tower" style=" color: #FF0033;">https://www.studioroosegaarde.net/project/smog-free-tower</a>
 		</p>
