Added a political webpage with info about the paris agreement and the EU and other groups -Aaron

--- a/Site/HTML/index.html
+++ b/Site/HTML/index.html
@@ -16,7 +16,8 @@
 				Menu
 			</h3><br>
 			<a href="charities.html" style=" color: red;">Charities</a><br>
-			<a href="technology.html" style=" color: red;">Technology</a>
+			<a href="technology.html" style=" color: red;">Technology</a><br>
+			<a href="politics.html" style=" color: red;">Politics</a>
 		</center>
 	</div>
 	<body style="margin: 0px; height: 100%; width: 100%;">
