--- a/Site/HTML/index.html
+++ b/Site/HTML/index.html
@@ -16,7 +16,8 @@
 				Menu
 			</h3><br>
 			<a href="charities.html" style=" color: red;">Charities</a><br>
-			<a href="technology.html" style=" color: red;">Technology</a>
+			<a href="technology.html" style=" color: red;">Technology</a><br>
+			<button ng-click="cameraPosition1()">Click</button>
 		</center>
 	</div>
 	<body style="margin: 0px; height: 100%; width: 100%;">
@@ -64,7 +65,7 @@
 				var angleY = 0;
 
 				window.addEventListener( 'resize', onWindowResize, false );
-
+				
 				function render() {
 					//mesh.rotation.x += 0.03;
 					//mesh.rotation.y += 0.03;
@@ -76,6 +77,24 @@
 				 	camera.aspect = window.innerWidth / window.innerHeight;
 				 	camera.updateProjectionMatrix();
 				 	renderer.setSize( window.innerWidth, window.innerHeight );
+				}
+
+				function cameraPosition1(){
+					var finalX = -175,
+					finalY = 150,
+					finalZ = 8,
+					x = Math.abs(camera.position.x),
+					y = Math.abs(camera.position.y),
+					z = Math.abs(camera.position.z),
+					xScale = Math.abs((finalX - x) / 30), 
+					yScale = Math.abs((finalY - y) / 30), 
+					zScale = Math.abs((finalZ - z) / 30) 
+					while(x != finalX && y != finalY != z < finalZ ){
+						x = x + 2
+						y = y + 2
+						z = z + 2
+						camera.position.set(x, y, z)
+					}
 				}
 			}
 
