Added backround to pages and created sign up page

--- a/Site/HTML/home_page.html
+++ b/Site/HTML/home_page.html
@@ -35,9 +35,11 @@
 		h1{
 			text-align: center;
 			text-decoration: underline;
+			text-shadow: 1px 1px 1px;
 		}
 		body{
-			background: lightblue;
+			background-image: url("HomePage.png");
+			background-size: cover;
 		}
 		.container{
 			padding-top: 200px;
