--- a/Site/HTML/login.html
+++ b/Site/HTML/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<body style="background-color: black;">
+<body>
 	<br><br>
 	<center>
 		<h2 style="color: red;">
@@ -15,3 +15,12 @@
 		</form>
 	</center>
 </body>
+
+<style>
+	body{
+		background-image: url("SignUporLoginPage.png");
+		background-position: 0px 30px; 
+  		background-size: cover;
+
+	}
+</style>
