--- a/Site/HTML/index.html
+++ b/Site/HTML/index.html
@@ -44,11 +44,11 @@
 				var light2 = new THREE.PointLight(0xffffff, 0.5)
 				scene.add(light2)
 				
-				var geometry = new THREE.SphereGeometry(100, 40, 40)
-				var material = new THREE.MeshLambertMaterial({ color: 0xff0000, wireframe: true});
-				var mesh = new THREE.Mesh(geometry, material)
+				var texture = new THREE.TextureLoader().load( 'texture.jpg' );
+				var geometry = new THREE.SphereGeometry( 200, 20, 20 );
+				var material = new THREE.MeshLambertMaterial( { map: texture, overdraw: 0.5 } );
+				var mesh = new THREE.Mesh( geometry, material );
 				mesh.position.set(0,0,0)
-
 				scene.add(mesh)
 
 				requestAnimationFrame(render)
