--- a/Site/HTML/charitiesv2.html
+++ b/Site/HTML/charitiesv2.html
@@ -3,15 +3,21 @@
 <html>
 <head>
 	<title>Charities</title>
+	<link rel="stylesheet" href="charities.css">
 </head>
 <body style="background-color: 	rgb(64,64,64);">
-	<h1 style="color: cyan; text-align: center;">Charities Fighting Pollution</h1>
 
+	<div class="header1">
+		<h1>Charities Fighting Pollution</h1>
+	</div>
+	<div class="header2">
+		<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="home_page.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="index.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="politics.html">Politics</a> &nbsp; <a style="color:white; text-decoration:none;" href="technology.html">Technologies</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
+	</div>
 
-	<div style="color: cyan;">
+	<div class = "bodytext" style="color: cyan;">
 		<p style="border-color: cyan; border: solid;">
 			<img id ='one' src="https://static1.squarespace.com/static/5973c5284c0dbf780e12719b/t/5979fd516b8f5b23f70436e4/1501167625634/NRDC_bear_logo.svg.png">
-			<h3>National Resources Defense Council</h3><br>
+			<h3>National Resources Defense Council</h3>
 			<h4 style="color: #00CC00;"><b>Mission Statement: </b></h4>
 			NRDC works to safeguard the earth—its people, its plants and animals, and the natural systems on which all life depends.<br><br>
 
@@ -100,56 +106,60 @@
 
 	</div>
 
+	<div class="cr">
+		<center>&copy; copyright Archangel</center>
+	</div>
+
 	<style>
 		#one{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 
 		#two{
 			float: right;
-			height: 175px;
-			width: 290px;
-			padding-top: 30px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 
 		#three{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 		#four{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 		#five{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 		#six{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 		#seven{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 		#eight{
 			float: right;
-			height: 150px;
-			width: 300px;
-			padding-top: 50px;
+			height: 300px;
+			width: 600px;
+			padding: 50px;
 		}
 	</style>
 
