More styling changes.

--- a/Site/HTML/charitiesv2.html
+++ b/Site/HTML/charitiesv2.html
@@ -5,7 +5,7 @@
 	<title>Charities</title>
 	<link rel="stylesheet" href="charities.css">
 </head>
-<body style="background-color: 	rgb(64,64,64);">
+<body>
 
 	<div class="header1">
 		<h1>Charities Fighting Pollution</h1>
